<resources>
    <string name="app_name">Kelajak book</string>
    <string name="welcome_to_the_kelajak_book">Welcome to the \"Kelajak book\"</string>
    <string name="all_books_in_the_category">All books in the category</string>
    <string name="languagesListName">Language</string>
    <string name="englishLanguage">English</string>
    <string name="russianLanguage">Russian</string>
    <string name="uzbek">Uzbek</string>
    <string name="home">Home</string>
    <string name="search_books">Search books</string>
    <string name="newest">Newest</string>
    <string name="categories">Categories</string>
    <string name="about_the_program">About the program</string>
    <string name="version_1_0">Version 1.0.1</string>
    <string name="copyright_c_2022_khakimov_abubakir" translatable="false">Copyright (c) 2022 KHakimov Abubakir</string>
    <string name="ok" translatable="false">OK</string>
    <string name="available">Available</string>
    <string name="rent_price">Rent price</string>
    <string name="selling_price">Selling price</string>
    <string name="contact_us">Contact us</string>
    <string name="authorization">Authorization</string>
    <string name="enter_your_phone_number">Enter your phone number</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="count">Count</string>
    <string name="pages">Pages</string>
    <string name="alphabet">Alphabet</string>
    <string name="coating_type">Coating type</string>
    <string name="manufacturing_company">Manufacturing company</string>
    <string name="about_book">About book</string>
    <string name="book_reviews">Book reviews</string>
    <string name="no_reviews">No reviews yet</string>
    <string name="review_here">Write a review...</string>
    <string name="bookmark">Bookmark</string>
    <string name="edit_profile">Edit profile</string>
    <string name="first_name">First name (necessarily)</string>
    <string name="last_name">Last name (not necessary)</string>
    <string name="registration">Registration</string>
    <string name="enter_the_first_and_last_name">Enter the first and last name</string>
    <string name="you_can_buy_or_rent_the_latest_and_best_books">You can buy or rent the latest and best books</string>
    <string name="profile">Profile</string>
    <string name="anonymous_user">Anonymous user</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="terms_of_trade">Terms of trade</string>
    <string name="search">Search</string>
    <string name="top_book_search">Top books searched</string>
    <string name="verification">Verification</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="do_you_really_want_to_leave">Do you really want to leave?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="notAvailable">Not available</string>
    <string name="sum">sum</string>
    <string name="book">book</string>
    <string name="all_reviews_of">All reviews of</string>
    <string name="reviews">reviews</string>
    <string name="all_reviews">reviews</string>
    <string name="please_enter_your_phone_number">Please enter your phone number!</string>
    <string name="error">Error!</string>
    <string name="you_have_successfully_sign_in_system">You have successfully sign in system!</string>
    <string name="please_enter_a_valid_phone_number">Please enter a valid phone number!</string>
    <string name="you_must_register_to_leave_a_review">You must register to leave a review!</string>
    <string name="all">All</string>
    <string name="please_write_your_first_name">Please write your first name!</string>
    <string name="you_have_successfully_logged_system">You have successfully registered in the system!</string>
    <string name="invalid_code_please_try_again">Invalid code, please try again!</string>
    <string name="detail_book">Book details</string>
    <string name="category_all">All</string>
</resources>